# shAI

./: .gitignore  .gitmodules  LICENSE  Modelfile  README.md  main.py  pyproject.toml  requirements.txt
data/: dataset.jsonl  feedback.db
docs/: tricks.txt
evals/: ground_truth.json  run_evals.py
scripts/: export_dataset.py  merge.py  test_gpu.py  train.py
scripts/models/checkpoints/: README.md
scripts/models/checkpoints/checkpoint-9/: README.md  rng_state.pth  scheduler.pt  tokenizer_config.json  trainer_state.json
shai_db/: chroma.sqlite3
src/ai/: ollama_client.py
src/shai/: cli.py
src/shai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/shai/ai/: ollama_client.py
src/shai/core/: config.py  env_detector.py  rag_engine.py
