[project]
name = "shai"
version = "0.1.0"
description = "AI-powered local terminal assistant with RAG memory and End-to-End MLOps pipeline."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "bitsandbytes>=0.49.2",
    "datasets>=4.8.5",
    "httpx>=0.28.1",
    "langchain>=1.2.15",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.2.2",
    "langchain-ollama>=1.1.0",
    "optimum>=2.1.0",
    "peft>=0.19.1",
    "sentence-transformers>=5.4.1",
    "torch>=2.11.0",
    "transformers>=5.6.0",
    "trl>=1.3.0",
    "typer>=0.24.1",
    "rich>=13.0.0",
    "shellingham>=1.5.4"
]

[project.scripts]
shai = "shai.cli:t"